# rustlang-rocket-mongodb

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml
benches/: my_benchmark.rs
src/: lib.rs  main.rs  mongo_connection.rs
src/cats/: handler.rs  mod.rs  repository.rs
tests/: test.rs
