[package]
name = "rustlang-rocket-mongodb"
version = "0.1.0"
authors = ["Louis Beaumont <louis.beaumont@gmail.com>"]

repository = "https://github.com/louis030195/rustlang-rocket-mongodb"
readme = "README.md"
license = "MIT"
edition = "2018"


[dependencies]
mongodb = "0.3.11"
dotenv = "0.13.0"
r2d2 = "0.8.3"
r2d2-mongodb = "*"
rocket = "0.4"
rocket_codegen = "0.4"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"

# Benches
criterion = "0.3"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
version = "0.4"

[[bench]]
name = "my_benchmark"
harness = false